# smart-course-recommendation-system

./: .cursorrules  .gitignore  PRODUCT_DESCRIPTION.md  PROJECT_PLAN.md  README.md  docker-compose.yml  env.example  how_to_run.md  pyproject.toml
ai-ml/: requirements.txt
ai-ml/deployment/: model_deployment.py
ai-ml/inference/: context_aware_engine.py  real_time_learning.py  recommendation_engine.py  semantic_understanding.py
ai-ml/models/: best_model.pth  context_patterns.json  evaluation_results.json  neural_cf_model.pth  training_summary.json
ai-ml/training/: neural_collaborative_filtering.py  train_models.py
backend/: Dockerfile  alembic.ini  env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 327e88d0b915_add_organization_course_url_modules_.py  52379b2d0d59_add_like_unlike_unenroll_columns_to_.py  618796f25021_add_enrollments_table.py  7200b647383f_add_user_interactions_user_preferences_.py  8912c09c665e_add_deleted_date_in_enrollmentsrename_.py  9e536c298807_add_organization_course_url_modules_.py  a488eb2fe043_add_skills_field_to_courses.py  c6180f64edca_initial_migration.py  e790e6d6a67b_add_deleted_date_in_enrollments.py
backend/app/: __init__.py  main.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: analytics.py  auth.py  courses.py  enrollments.py  recommendations.py  training.py  users.py
backend/app/core/: config.py  constants.py  database.py  security.py
backend/app/models/: __init__.py  course.py  enrollment.py  interaction.py  recommendation.py  user.py
backend/app/schemas/: auth.py  course.py  enrollment.py  recommendation.py  user.py
backend/app/services/: analytics_service.py  course_service.py  enrollment_service.py  interaction_tracking_service.py  recommendation_service.py  user_preference_service.py  user_service.py
backend/scripts/: update_analytics.py
database/init/: 01_init.sql
database/migrations/: analytics_schema.sql
database/scripts/: README.md  dataset.py
docs/: recommendation_systems.md
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/components/: Button.tsx  LoadingComponent.tsx
frontend/src/navigation/: AppNavigator.tsx
frontend/src/screens/: CourseDetailScreen.tsx  CoursesScreen.tsx  HomeScreen.tsx  LoginScreen.tsx  ProfileScreen.tsx  RecommendationsScreen.tsx  RegisterScreen.tsx
frontend/src/services/: api.ts
frontend/src/store/: index.ts
frontend/src/store/slices/: authSlice.ts  courseSlice.ts  enrollmentSlice.ts  recommendationSlice.ts
frontend/src/styles/: courseDetailStyles.ts  profileStyles.ts  recommendationsStyles.ts  responsiveStyles.ts
frontend/src/types/: index.ts  react-native-animated-loader.d.ts
frontend/src/utils/: validation.ts
